Source/WebCore/dom/MouseEvent.cpp
@@ -191,11 +191,7 @@ bool MouseEvent::canTriggerActivationBehavior(const Event& event)
 
 MouseButton MouseEvent::button() const
 {
-    static constexpr std::array mouseButtonCases { MouseButton::None, MouseButton::PointerHasNotChanged, MouseButton::Left, MouseButton::Middle, MouseButton::Right };
-    const auto isKnownButton = std::ranges::any_of(mouseButtonCases, [buttonValue = this->m_button](MouseButton button) {
-        return buttonValue == enumToUnderlyingType(button);
-    });
-    return isKnownButton ? static_cast<MouseButton>(m_button) : MouseButton::Other;
+    return buttonFromShort(m_button);
 }
 
 unsigned MouseEvent::which() const
