Tools/WebKitTestRunner/gtk/EventSenderProxyGtk.cpp
@@ -78,14 +78,20 @@ EventSenderProxy::~EventSenderProxy() = default;
 
 static unsigned eventSenderButtonToGDKButton(unsigned button)
 {
-    int mouseButton = 3;
-    if (button <= 2)
-        mouseButton = button + 1;
-    // fast/events/mouse-click-events expects the 4th button to be treated as the middle button.
-    else if (button == 3)
-        mouseButton = 2;
-
-    return mouseButton;
+    switch (button) {
+    case 0:
+        return 1;
+    case 1:
+        return 2;
+    case 2:
+        return 3;
+    case 3:
+        return 8;
+    case 4:
+        return 9;
+    default:
+        return 1;
+    }
 }
 
 static guint webkitModifiersToGDKModifiers(WKEventModifiers wkModifiers)
@@ -258,6 +264,10 @@ void EventSenderProxy::rawKeyUp(WKStringRef key, WKEventModifiers wkModifiers, u
 
 static inline unsigned stateModifierForGdkButton(unsigned button)
 {
+    // Store the state of the back and forward buttons (GDK buttons 8 & 9)
+    // as bit 11 and 12, respectively.
+    button = button == 8 ? 4 : button;
+    button = button == 9 ? 5 : button;
     return 1 << (8 + button - 1);
 }
 
